syntax = "proto3";

package scheduling.schedule_options;

service ScheduleOptionsService {
    rpc create(CreateSchedOptionsMessage) returns (CreateSchedOptionsResponseMessage);
}

message CreateSchedOptionsMessage {
  int32 startTime = 1;
  int32 endTime = 2;
  int32 duration = 3;
  int32 dayOfWeek = 4;
  int32 provider_id = 5;
}

message CreateSchedOptionsResponseMessage {
  int32 startTime = 1;
  int32 endTime = 2;
  int32 duration = 3;
  int32 dayOfWeek = 4;
  int32 provider_id = 5;
}