syntax = "proto3";

package scheduling;

service SchedulingService {
    rpc FindOne(SchedulingById) returns (Scheduling);
}

message SchedulingById {
    int32 id = 1;
}

message Scheduling {
    int32 id = 1;
    string time = 2;
}

service ProviderService {
    rpc getAvailability(ProviderAvailability) returns (Availability);
}

message ProviderAvailability {
    int32 provider_id = 1;
    string date = 2;
}

message Availability {
    repeated string availability = 1;
}